<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo" />


    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:layout_below="@id/imageView" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/usernameLogin"/>

    <Button
        android:id="@+id/login2"
        android:layout_width="237dp"
        android:layout_height="93dp"
        android:layout_below="@+id/passwordLogin"
        android:layout_marginStart="92dp"
        android:layout_marginTop="20dp"
        android:text="LOG IN" />

</RelativeLayout>